{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 1425,
  "lineage": "3df405d7-b65b-cdab-5775-632d4cb29407",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-006f82a1d5a27da54",
            "arn": "arn:aws:ec2:ap-south-1:675544936703:instance/i-0a006276c7f2f2634",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a006276c7f2f2634",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bdf5a1fed57c323a"
              }
            ],
            "primary_network_interface_id": "eni-0bdf5a1fed57c323a",
            "private_dns": "ip-30-0-1-151.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "30.0.1.151",
            "public_dns": "ec2-13-201-90-79.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.90.79",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ba02a3ebdd1c7b8f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b790f839e6b1ba7e",
            "tags": {
              "Name": "eks-bastion"
            },
            "tags_all": {
              "Name": "eks-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01c7f0af7ac5f0203"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "i-0a006276c7f2f2634",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion",
            "module.subnets.aws_subnet.eks_pub_subnet",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:675544936703:security-group/sg-01c7f0af7ac5f0203",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c7f0af7ac5f0203",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eks-bastion-sg",
            "name_prefix": "",
            "owner_id": "675544936703",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-bastion-sg"
            },
            "tags_all": {
              "Name": "eks-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-008c78ef81b65e814"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "sg-01c7f0af7ac5f0203",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:675544936703:security-group/sg-0dc993066797c5be0",
            "description": "Security Group for Amazon EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc993066797c5be0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow NFS traffic from EKS worker nodes",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02bbdca9dc70b1577"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "eks_cluster-efs-sg",
            "name_prefix": "",
            "owner_id": "675544936703",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks_cluster-efs-sg"
            },
            "tags_all": {
              "Name": "eks_cluster-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-008c78ef81b65e814"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "sg-0dc993066797c5be0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1585077004",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-south-1",
            "security_group_id": "sg-0dc993066797c5be0",
            "security_group_rule_id": "sgr-0264441a79b53a8a3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.efs.aws_security_group.efs_sg",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow NFS traffic from EKS worker nodes",
            "from_port": 2049,
            "id": "sgrule-1571810733",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0dc993066797c5be0",
            "security_group_rule_id": "sgr-04edab3f12a8742f8",
            "self": false,
            "source_security_group_id": "sg-02bbdca9dc70b1577",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.efs.aws_security_group.efs_sg",
            "module.security.aws_security_group.eks_node_sg",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:675544936703:internet-gateway/igw-01d6edc4a55a520f1",
            "id": "igw-01d6edc4a55a520f1",
            "owner_id": "675544936703",
            "region": "ap-south-1",
            "tags": {
              "Name": "eks-vpc-igw"
            },
            "tags_all": {
              "Name": "eks-vpc-igw"
            },
            "vpc_id": "vpc-008c78ef81b65e814"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "igw-01d6edc4a55a520f1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eks_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f5ceb804198fbea",
            "arn": "arn:aws:ec2:ap-south-1:675544936703:elastic-ip/eipalloc-02f5ceb804198fbea",
            "association_id": "eipassoc-06d045a61b036d695",
            "domain": "vpc",
            "id": "eipalloc-02f5ceb804198fbea",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0cef84e5b9484f893",
            "private_dns": "ip-30-0-1-7.ap-south-1.compute.internal",
            "private_ip": "30.0.1.7",
            "public_dns": "ec2-13-207-177-187.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.207.177.187",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "eks-vpc-nat-eip"
            },
            "tags_all": {
              "Name": "eks-vpc-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "eipalloc-02f5ceb804198fbea",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f5ceb804198fbea",
            "association_id": "eipassoc-06d045a61b036d695",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0df4d5d2d2fe8410b",
            "network_interface_id": "eni-0cef84e5b9484f893",
            "private_ip": "30.0.1.7",
            "public_ip": "13.207.177.187",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b790f839e6b1ba7e",
            "tags": {
              "Name": "eks-vpc-nat-gw"
            },
            "tags_all": {
              "Name": "eks-vpc-nat-gw"
            },
            "vpc_id": "vpc-008c78ef81b65e814"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "nat-0df4d5d2d2fe8410b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.nat.aws_eip.eks_nat_eip",
            "module.subnets.aws_subnet.eks_pub_subnet",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route",
      "name": "eks_priv_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c1027a891b89be9c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0df4d5d2d2fe8410b",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c1027a891b89be9c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0c1027a891b89be9c"
          },
          "dependencies": [
            "module.nat.aws_eip.eks_nat_eip",
            "module.nat.aws_nat_gateway.eks_nat_gw",
            "module.route.aws_route_table.eks_priv_rt",
            "module.subnets.aws_subnet.eks_pub_subnet",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route",
      "name": "eks_pub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01d6edc4a55a520f1",
            "id": "r-rtb-01e7570a71daf1d691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-01e7570a71daf1d69",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-01e7570a71daf1d69"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.eks_igw",
            "module.route.aws_route_table.eks_pub_rt",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_priv_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:675544936703:route-table/rtb-0c1027a891b89be9c",
            "id": "rtb-0c1027a891b89be9c",
            "owner_id": "675544936703",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0df4d5d2d2fe8410b",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-vpc-priv-rt"
            },
            "tags_all": {
              "Name": "eks-vpc-priv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-008c78ef81b65e814"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "rtb-0c1027a891b89be9c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:675544936703:route-table/rtb-01e7570a71daf1d69",
            "id": "rtb-01e7570a71daf1d69",
            "owner_id": "675544936703",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d6edc4a55a520f1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-vpc-pub-rt"
            },
            "tags_all": {
              "Name": "eks-vpc-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-008c78ef81b65e814"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "rtb-01e7570a71daf1d69",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_priv_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eed64e4b8f7ff8a6",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c1027a891b89be9c",
            "subnet_id": "subnet-06fceec0b80db7af2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "rtbassoc-0eed64e4b8f7ff8a6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.route.aws_route_table.eks_priv_rt",
            "module.subnets.aws_subnet.eks_pri_subnet",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf641985d060297a",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c1027a891b89be9c",
            "subnet_id": "subnet-064545aaa7d63cdd3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "rtbassoc-0cf641985d060297a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.route.aws_route_table.eks_priv_rt",
            "module.subnets.aws_subnet.eks_pri_subnet",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e068691c143e6016",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c1027a891b89be9c",
            "subnet_id": "subnet-06e2d9be81c63bd81"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "rtbassoc-0e068691c143e6016",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.route.aws_route_table.eks_priv_rt",
            "module.subnets.aws_subnet.eks_pri_subnet",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_pub_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e145a7f15c7dce2",
            "region": "ap-south-1",
            "route_table_id": "rtb-01e7570a71daf1d69",
            "subnet_id": "subnet-0b790f839e6b1ba7e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "rtbassoc-08e145a7f15c7dce2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.route.aws_route_table.eks_pub_rt",
            "module.subnets.aws_subnet.eks_pub_subnet",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085b497cd72538258",
            "region": "ap-south-1",
            "route_table_id": "rtb-01e7570a71daf1d69",
            "subnet_id": "subnet-0b3f3a0cfeff2b4d7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "rtbassoc-085b497cd72538258",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.route.aws_route_table.eks_pub_rt",
            "module.subnets.aws_subnet.eks_pub_subnet",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caf770cc4b146d61",
            "region": "ap-south-1",
            "route_table_id": "rtb-01e7570a71daf1d69",
            "subnet_id": "subnet-05fda828b78c034d7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "rtbassoc-0caf770cc4b146d61",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.route.aws_route_table.eks_pub_rt",
            "module.subnets.aws_subnet.eks_pub_subnet",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:675544936703:security-group/sg-08e78b523bfb0eb9e",
            "description": "Security group for EKS control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e78b523bfb0eb9e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to access EKS API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02bbdca9dc70b1577"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks_cluster-cluster-sg",
            "name_prefix": "",
            "owner_id": "675544936703",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks_cluster-cluster-sg"
            },
            "tags_all": {
              "Name": "eks_cluster-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-008c78ef81b65e814"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "sg-08e78b523bfb0eb9e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:675544936703:security-group/sg-02bbdca9dc70b1577",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow worker nodes outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bbdca9dc70b1577",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP ping to EKS worker nodes",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access to EKS worker nodes",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow EKS control plane to communicate with worker nodes",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e78b523bfb0eb9e"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow communication between EKS worker nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "eks_cluster-node-sg",
            "name_prefix": "",
            "owner_id": "675544936703",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks_cluster-node-sg"
            },
            "tags_all": {
              "Name": "eks_cluster-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-008c78ef81b65e814"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "sg-02bbdca9dc70b1577",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-1698483309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-south-1",
            "security_group_id": "sg-08e78b523bfb0eb9e",
            "security_group_rule_id": "sgr-011fbc73e4124b5df",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.eks_cluster_sg",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_from_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to access EKS API",
            "from_port": 443,
            "id": "sgrule-1209049789",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-08e78b523bfb0eb9e",
            "security_group_rule_id": "sgr-0b34bd37ae4a5e34a",
            "self": false,
            "source_security_group_id": "sg-02bbdca9dc70b1577",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.eks_cluster_sg",
            "module.security.aws_security_group.eks_node_sg",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_to_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow EKS control plane to communicate with worker nodes",
            "from_port": 1025,
            "id": "sgrule-3452733385",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-02bbdca9dc70b1577",
            "security_group_rule_id": "sgr-07dc8b9e4c4002682",
            "self": false,
            "source_security_group_id": "sg-08e78b523bfb0eb9e",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.eks_cluster_sg",
            "module.security.aws_security_group.eks_node_sg",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow worker nodes outbound traffic",
            "from_port": 0,
            "id": "sgrule-94940357",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-south-1",
            "security_group_id": "sg-02bbdca9dc70b1577",
            "security_group_rule_id": "sgr-0a9c33de1e706037b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.eks_node_sg",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow ICMP ping to EKS worker nodes",
            "from_port": -1,
            "id": "sgrule-2286504230",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "region": "ap-south-1",
            "security_group_id": "sg-02bbdca9dc70b1577",
            "security_group_rule_id": "sgr-022a6c418deab69d5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.eks_node_sg",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH access to EKS worker nodes",
            "from_port": 22,
            "id": "sgrule-3266049332",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-02bbdca9dc70b1577",
            "security_group_rule_id": "sgr-0f187102f01d397de",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.eks_node_sg",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_to_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow communication between EKS worker nodes",
            "from_port": 0,
            "id": "sgrule-1316397792",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-south-1",
            "security_group_id": "sg-02bbdca9dc70b1577",
            "security_group_rule_id": "sgr-0487ec9d75b6069bd",
            "self": false,
            "source_security_group_id": "sg-02bbdca9dc70b1577",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.eks_node_sg",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_pri_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:675544936703:subnet/subnet-06fceec0b80db7af2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "30.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fceec0b80db7af2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "675544936703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "eks-vpc-pri_subnet-1"
            },
            "tags_all": {
              "Name": "eks-vpc-pri_subnet-1"
            },
            "vpc_id": "vpc-008c78ef81b65e814"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "subnet-06fceec0b80db7af2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:675544936703:subnet/subnet-064545aaa7d63cdd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "30.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064545aaa7d63cdd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "675544936703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "eks-vpc-pri_subnet-2"
            },
            "tags_all": {
              "Name": "eks-vpc-pri_subnet-2"
            },
            "vpc_id": "vpc-008c78ef81b65e814"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "subnet-064545aaa7d63cdd3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:675544936703:subnet/subnet-06e2d9be81c63bd81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "30.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e2d9be81c63bd81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "675544936703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "eks-vpc-pri_subnet-3"
            },
            "tags_all": {
              "Name": "eks-vpc-pri_subnet-3"
            },
            "vpc_id": "vpc-008c78ef81b65e814"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "subnet-06e2d9be81c63bd81",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:675544936703:subnet/subnet-0b790f839e6b1ba7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "30.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b790f839e6b1ba7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "675544936703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "eks-vpc-pub_subnet-1"
            },
            "tags_all": {
              "Name": "eks-vpc-pub_subnet-1"
            },
            "vpc_id": "vpc-008c78ef81b65e814"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "subnet-0b790f839e6b1ba7e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:675544936703:subnet/subnet-0b3f3a0cfeff2b4d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "30.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3f3a0cfeff2b4d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "675544936703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "eks-vpc-pub_subnet-2"
            },
            "tags_all": {
              "Name": "eks-vpc-pub_subnet-2"
            },
            "vpc_id": "vpc-008c78ef81b65e814"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "subnet-0b3f3a0cfeff2b4d7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:675544936703:subnet/subnet-05fda828b78c034d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "30.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fda828b78c034d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "675544936703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "eks-vpc-pub_subnet-3"
            },
            "tags_all": {
              "Name": "eks-vpc-pub_subnet-3"
            },
            "vpc_id": "vpc-008c78ef81b65e814"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "subnet-05fda828b78c034d7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:675544936703:vpc/vpc-008c78ef81b65e814",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-0dfd5149de85144a2",
            "default_route_table_id": "rtb-0ba0a0f376eb2e482",
            "default_security_group_id": "sg-0d32ca7895b115dbd",
            "dhcp_options_id": "dopt-0556238832d634a4d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008c78ef81b65e814",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba0a0f376eb2e482",
            "owner_id": "675544936703",
            "region": "ap-south-1",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "675544936703",
            "id": "vpc-008c78ef81b65e814",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}